<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:background="@drawable/rt">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            android:id="@+id/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/RegTxt"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:shadowColor="@color/white"
            android:shadowDy="5"
            android:shadowDx="5"
            android:shadowRadius="5"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LastInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Lastname"
                android:hint="@string/username"/>

        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first"
            android:hint="@string/firstname"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MidInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/middle"
            android:hint="@string/mid"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ID_Number">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idnum"
            android:hint="@string/idnum"/>

    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PassInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Batch"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:id="@+id/chooseBatch"/>

    <Spinner
        android:id="@+id/registrationYearSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/registration_years" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Course"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:id="@+id/chooseCourse"/>

        <Spinner
            android:id="@+id/courseSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/course_options"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:text="Choose Section"
            android:id="@+id/chooseSec"/>

        <Spinner
            android:id="@+id/sectionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/section_options"
            />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/loginNow"
            android:text="@string/click_to_login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

